// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCardMedia.js should render component and match snapshot 1`] = `

<div class="v-card__media"
     style="height: auto;"
>
  <div class="v-card__media__content">
  </div>
</div>

`;

exports[`VCardMedia.js should render component with contained background and match snapshot 1`] = `

<div class="v-card__media"
     style="height: auto;"
>
  <div class="v-card__media__background">
  </div>
  <div class="v-card__media__content">
  </div>
</div>

`;

exports[`VCardMedia.js should render component with custom background image and match snapshot 1`] = `

<div class="v-card__media"
     style="height: auto;"
>
  <div class="v-card__media__background">
  </div>
  <div class="v-card__media__content">
  </div>
</div>

`;

exports[`VCardMedia.js should render component with custom height (number) and match snapshot 1`] = `

<div class="v-card__media"
     style="height: 100px;"
>
  <div class="v-card__media__content">
  </div>
</div>

`;

exports[`VCardMedia.js should render component with custom height (string) and match snapshot 1`] = `

<div class="v-card__media"
     style="height: 100px;"
>
  <div class="v-card__media__content">
  </div>
</div>

`;

exports[`VCardMedia.js should render component with images with urls that contain the ( & ) characters 1`] = `

<div class="v-card__media"
     style="height: auto;"
>
  <div class="v-card__media__background">
  </div>
  <div class="v-card__media__content">
  </div>
</div>

`;
